--- a/MicroDock/MicroDock.csproj
+++ b/MicroDock/MicroDock.csproj
@@ -23,12 +23,13 @@
       <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Avalonia.ReactiveUI" Version="11.3.7" />
     <PackageReference Include="Avalonia.Win32" Version="11.3.7" />
     <PackageReference Include="DesktopNotifications" Version="1.3.1" />
     <PackageReference Include="DesktopNotifications.Windows" Version="1.3.1" />
+    <PackageReference Include="FluentAvaloniaUI" Version="2.4.0" />
     <PackageReference Include="H.NotifyIcon.Wpf" Version="2.3.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+    <PackageReference Include="ReactiveUI.Avalonia" Version="11.3.0" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.9" />
 	<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
 	<PackageReference Include="SQLiteNetExtensions" Version="2.1.0" />
