--- a/MicroDock/MicroDock.csproj
+++ b/MicroDock/MicroDock.csproj
@@ -30,6 +30,9 @@
     <PackageReference Include="H.NotifyIcon.Wpf" Version="2.3.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
     <PackageReference Include="ReactiveUI.Avalonia" Version="11.3.0" />
+    <PackageReference Include="Serilog" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.9" />
 	<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
 	<PackageReference Include="SQLiteNetExtensions" Version="2.1.0" />
