--- a/Plugin/BuglySymbolResolver/BuglySymbolResolver.csproj
+++ b/Plugin/BuglySymbolResolver/BuglySymbolResolver.csproj
@@ -12,4 +12,10 @@
 	<ItemGroup>
 		<PackageReference Include="Avalonia" Version="11.3.7" />
 	</ItemGroup>
+
+	<ItemGroup>
+		<None Update="plugin.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 </Project>
