--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -14,4 +14,10 @@
       <PackageReference Include="Avalonia" Version="11.3.7" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="plugin.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
