--- a/Plugin/BuglySymbolResolver/BuglySymbolResolver.csproj
+++ b/Plugin/BuglySymbolResolver/BuglySymbolResolver.csproj
@@ -18,4 +18,8 @@
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 	</ItemGroup>
+
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+	  <Exec Command="copy /Y $(TargetPath) $(SolutionDir)MicroDock\bin\Debug\net8.0-windows10.0.17763.0\Plugins\com.microdock.buglysymbolresolver\$(TargetName)$(TargetExt)" />
+	</Target>
 </Project>
