--- a/Plugin/UnityProjectPlugin/UnityProjectPlugin.csproj
+++ b/Plugin/UnityProjectPlugin/UnityProjectPlugin.csproj
@@ -19,4 +19,8 @@
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 	</ItemGroup>
+
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+		<Exec Command="copy /Y $(TargetPath) $(SolutionDir)MicroDock\bin\Debug\net8.0-windows10.0.17763.0\Plugins\com.microdock.unityproject\$(TargetName)$(TargetExt)" />
+	</Target>
 </Project>
