--- a/Plugin/UnityProjectPlugin/UnityProjectPlugin.csproj
+++ b/Plugin/UnityProjectPlugin/UnityProjectPlugin.csproj
@@ -11,6 +11,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Avalonia" Version="11.3.7" />
+		<PackageReference Include="Avalonia.Controls.DataGrid" Version="11.3.7" />
 	</ItemGroup>
 
 	<!-- 自动复制 plugin.json 到输出目录 -->
