--- a/Plugin/RemoteDesktopPlugin/RemoteDesktopPlugin.csproj
+++ b/Plugin/RemoteDesktopPlugin/RemoteDesktopPlugin.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,7 +14,6 @@
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.3.8" />
     <PackageReference Include="FluentAvaloniaUI" Version="2.4.0" />
-    <PackageReference Include="System.Text.Json" Version="8.0.0" />
   </ItemGroup>
 
   <!-- 自动复制 plugin.json 到输出目录 -->
@@ -25,5 +25,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+		<Exec Command="copy /Y $(TargetPath) $(SolutionDir)MicroDock\bin\Debug\net8.0-windows10.0.17763.0\Plugins\com.microdock.remotedesktop\$(TargetName)$(TargetExt)" />
+	</Target>
 </Project>
