--- a/Plugin/TodoListPlugin/TodoListPlugin.csproj
+++ b/Plugin/TodoListPlugin/TodoListPlugin.csproj
@@ -13,4 +13,14 @@
 		<PackageReference Include="Avalonia" Version="11.3.8" />
 		<PackageReference Include="FluentAvaloniaUI" Version="2.4.0" />
 	</ItemGroup>
+
+	<!-- 自动复制 plugin.json 到输出目录 -->
+	<ItemGroup>
+		<None Update="plugin.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+		<Exec Command="copy /Y $(TargetPath) $(SolutionDir)MicroDock\bin\Debug\net8.0-windows10.0.17763.0\Plugins\com.microdock.todolist\$(TargetName)$(TargetExt)" />
+	</Target>
 </Project>
