--- a/Plugin/AIChatPlugin/AIChatPlugin.csproj
+++ b/Plugin/AIChatPlugin/AIChatPlugin.csproj
@@ -12,8 +12,12 @@
 
 	<ItemGroup>
 		<PackageReference Include="Avalonia" Version="11.3.8" />
+		<PackageReference Include="Avalonia.AvaloniaEdit" Version="11.3.0" />
+		<PackageReference Include="DynamicData" Version="9.4.1" />
 		<PackageReference Include="ReactiveUI.Avalonia" Version="11.3.8" />
 		<PackageReference Include="ClassIsland.Markdown.Avalonia" Version="11.0.3.4" />
+		<PackageReference Include="SkiaSharp" Version="3.119.1" />
+		<PackageReference Include="WebView.Avalonia" Version="11.0.0.1" />
 		<PackageReference Include="FluentAvaloniaUI" Version="2.4.0" />
 	</ItemGroup>
 
