--- a/Plugin/FileToolPlugin/FileToolPlugin.csproj
+++ b/Plugin/FileToolPlugin/FileToolPlugin.csproj
@@ -23,5 +23,7 @@
     </ItemGroup>
     <Copy SourceFiles="@(ConsoleAppFiles)" DestinationFolder="$(OutputPath)" />
   </Target>
-
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+		<Exec Command="copy /Y $(TargetPath) $(SolutionDir)MicroDock\bin\Debug\net8.0-windows10.0.17763.0\Plugins\com.microdock.filetool\$(TargetName)$(TargetExt)" />
+	</Target>
 </Project>
