--- a/Plugin/MicroNotePlugin/MicroNotePlugin.csproj
+++ b/Plugin/MicroNotePlugin/MicroNotePlugin.csproj
@@ -13,6 +13,7 @@
 		<PackageReference Include="Avalonia.AvaloniaEdit" Version="11.3.0" />
 		<PackageReference Include="DynamicData" Version="9.4.1" />
 		<PackageReference Include="ReactiveUI.Avalonia" Version="11.3.8" />
+		<PackageReference Include="ClassIsland.Markdown.Avalonia" Version="11.0.3.4" />
 		<PackageReference Include="FluentAvaloniaUI" Version="2.4.0" />
 		<PackageReference Include="Markdig" Version="0.43.0" />
 	</ItemGroup>
