--- a/PluginServer/Dockerfile.frontend
+++ b/PluginServer/Dockerfile.frontend
@@ -8,8 +8,8 @@ WORKDIR /app
 # 复制package文件
 COPY frontend/package*.json ./
 
-# 安装依赖
-RUN npm ci --only=production
+# 安装所有依赖（包括 devDependencies，构建需要）
+RUN npm ci
 
 # 复制源代码
 COPY frontend/ .
