--- a/PluginServer/backend/requirements.txt
+++ b/PluginServer/backend/requirements.txt
@@ -6,3 +6,5 @@ pydantic-settings==2.1.0
 sqlalchemy==2.0.23
 aiosqlite==0.19.0
 aiofiles==23.2.1
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
