--- a/PluginServer/docker-compose.yml
+++ b/PluginServer/docker-compose.yml
@@ -2,18 +2,29 @@ version: '3.8'
 
 services:
   backend:
-    build: ./backend
+    build:
+      context: .
+      dockerfile: Dockerfile.backend
     container_name: microdock-backend
     restart: always
     volumes:
-      - ./data:/app/data
+      - ./backend/data:/app/data
     environment:
+      # 数据库配置
       - DATABASE_URL=sqlite+aiosqlite:///./data/plugins.db
+      # 管理员认证配置（生产环境请修改）
+      - ADMIN_USERNAME=admin
+      - ADMIN_PASSWORD=admin
+      # JWT 密钥（生产环境务必修改为随机字符串）
+      - JWT_SECRET_KEY=your-production-secret-key-change-me
+      - JWT_EXPIRE_MINUTES=1440
     networks:
       - microdock-network
 
   frontend:
-    build: ./frontend
+    build:
+      context: .
+      dockerfile: Dockerfile.frontend
     container_name: microdock-frontend
     restart: always
     ports:
