--- a/MicroDock/MicroDock.csproj
+++ b/MicroDock/MicroDock.csproj
@@ -54,4 +54,13 @@
 	<ItemGroup>
 		<ProjectReference Include="..\MicroDock.Plugin\MicroDock.Plugin.csproj" />
 	</ItemGroup>
+
+	<!-- 添加到 MicroDock.csproj -->
+	<ItemGroup>
+		<!-- 引用 Restarter 输出，发布时自动复制 -->
+		<None Include="..\MicroDock.Restarter\bin\Release\net8.0\publish\win-x64\Restarter.exe"
+			  Link="Restarter.exe"
+			  CopyToOutputDirectory="PreserveNewest"
+			  CopyToPublishDirectory="PreserveNewest" />
+	</ItemGroup>
 </Project>
