--- a/MicroDock/MicroDock.csproj
+++ b/MicroDock/MicroDock.csproj
@@ -30,22 +30,23 @@
 		<PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.8" />
 		<PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.8" />
 		<PackageReference Include="Avalonia.Controls.DataGrid" Version="11.3.8" />
+		<PackageReference Include="Avalonia.Win32" Version="11.3.8" />
+		<PackageReference Include="ReactiveUI.Avalonia" Version="11.3.8" />
 		<!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
 		<PackageReference Include="Avalonia.Diagnostics" Version="11.3.8">
 			<IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
 			<PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
 		</PackageReference>
-		<PackageReference Include="Avalonia.Win32" Version="11.3.8" />
 		<PackageReference Include="DesktopNotifications" Version="1.3.1" />
 		<PackageReference Include="DesktopNotifications.Windows" Version="1.3.1" />
 		<PackageReference Include="FluentAvaloniaUI" Version="2.4.0" />
 		<PackageReference Include="H.NotifyIcon.Wpf" Version="2.3.2" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
-		<PackageReference Include="ReactiveUI.Avalonia" Version="11.3.8" />
+		<!--日志-->
 		<PackageReference Include="Serilog" Version="4.3.0" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
 		<PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
-		<PackageReference Include="System.Drawing.Common" Version="10.0.0" />
+		<!--Sqlite-->
 		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
 		<PackageReference Include="SQLiteNetExtensions" Version="2.1.0" />
 		<PackageReference Include="SQLiteNetExtensions.Async" Version="2.1.0" />
@@ -58,9 +59,6 @@
 	<!-- 添加到 MicroDock.csproj -->
 	<ItemGroup>
 		<!-- 引用 Restarter 输出，发布时自动复制 -->
-		<None Include="..\MicroDock.Restarter\bin\Release\net8.0\publish\win-x64\Restarter.exe"
-			  Link="Utils/Restarter.exe"
-			  CopyToOutputDirectory="PreserveNewest"
-			  CopyToPublishDirectory="PreserveNewest" />
+		<None Include="..\MicroDock.Restarter\bin\Release\net8.0\publish\win-x64\Restarter.exe" Link="Utils/Restarter.exe" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" />
 	</ItemGroup>
 </Project>
