修改打开文件夹，更新版本

--- a/MicroDock/MicroDock.csproj
+++ b/MicroDock/MicroDock.csproj
@@ -59,6 +59,8 @@
 	<!-- 添加到 MicroDock.csproj -->
 	<ItemGroup>
 		<!-- 引用 Restarter 输出，发布时自动复制 -->
-		<None Include="..\MicroDock.Restarter\bin\Release\net8.0\publish\win-x64\Restarter.exe" Link="Utils/Restarter.exe" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" />
+		<None Include="..\MicroDock.Restarter\bin\Release\net8.0\publish\win-x64\Restarter.exe" Link="Utils/Restarter.exe" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" >
+			<TargetPath>Restarter.exe</TargetPath>
+		</None>
 	</ItemGroup>
 </Project>
