--- a/Plugin/MicroNotePlugin/MicroNotePlugin.csproj
+++ b/Plugin/MicroNotePlugin/MicroNotePlugin.csproj
@@ -1,29 +1,48 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<!-- Ensure all dependencies are copied for plugin loading -->
+		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+		<!-- <UseWindowsForms>true</UseWindowsForms> -->
 	</PropertyGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\..\MicroDock.Plugin\MicroDock.Plugin.csproj" />
 	</ItemGroup>
+	<!--<ItemGroup>
+		<Using Remove="System.Windows.Forms" />
+		<Using Remove="System.Drawing" />
+	</ItemGroup>-->
 	<ItemGroup>
 		<PackageReference Include="Avalonia" Version="11.3.8" />
 		<PackageReference Include="Avalonia.AvaloniaEdit" Version="11.3.0" />
 		<PackageReference Include="DynamicData" Version="9.4.1" />
 		<PackageReference Include="ReactiveUI.Avalonia" Version="11.3.8" />
-		<PackageReference Include="ClassIsland.Markdown.Avalonia" Version="11.0.3.4" />
 		<PackageReference Include="FluentAvaloniaUI" Version="2.4.0" />
 		<PackageReference Include="Markdig" Version="0.43.0" />
+		<!-- WebView Support -->
+		<PackageReference Include="WebView.Avalonia" Version="11.0.0.1" />
+		<PackageReference Include="WebView.Avalonia.Desktop" Version="11.0.0.1" />
+		<!-- DI and Database -->
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
+		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
+		<PackageReference Include="SQLiteNetExtensions" Version="2.1.0" />
+		<PackageReference Include="SQLiteNetExtensions.Async" Version="2.1.0" />
 	</ItemGroup>
 	<!-- 自动复制 plugin.json 到输出目录 -->
 	<ItemGroup>
 		<None Update="plugin.json">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+		<Content Include="Assets\Web\**">
+			<TargetPath>config\web\%(Filename)%(Extension)</TargetPath>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
 	</ItemGroup>
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
-		<Exec Command="copy /Y $(TargetPath) $(SolutionDir)MicroDock\bin\Debug\net8.0-windows10.0.17763.0\Plugins\com.microdock.note\$(TargetName)$(TargetExt)" />
+		<Exec Command="copy /Y &quot;$(TargetPath)&quot; &quot;$(MSBuildProjectDirectory)\..\..\MicroDock\bin\Debug\net8.0-windows10.0.17763.0\Plugins\com.microdock.note\$(TargetName)$(TargetExt)&quot;" />
+		<!-- <Exec Command="" />-->
 	</Target>
 </Project>
