--- a/Plugin/MicroNotePlugin/MicroNotePlugin.csproj
+++ b/Plugin/MicroNotePlugin/MicroNotePlugin.csproj
@@ -16,6 +16,7 @@
 		<PackageReference Include="Avalonia" Version="11.3.8" />
 		<PackageReference Include="Avalonia.AvaloniaEdit" Version="11.3.0" />
 		<PackageReference Include="DynamicData" Version="9.4.1" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
 		<PackageReference Include="ReactiveUI.Avalonia" Version="11.3.8" />
 		<PackageReference Include="FluentAvaloniaUI" Version="2.4.0" />
 		<PackageReference Include="Markdig" Version="0.43.0" />
@@ -38,6 +39,12 @@
 			<TargetPath>config\web\%(RecursiveDir)%(Filename)%(Extension)</TargetPath>
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
+	</ItemGroup>
+	<ItemGroup>
+	  <AvaloniaXaml Remove="Views\Controls\TagEditor.axaml" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Compile Remove="Views\Controls\TagEditor.axaml.cs" />
 	</ItemGroup>
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
 		<Exec Command="copy /Y $(TargetPath) $(MSBuildProjectDirectory)\..\..\MicroDock\bin\Debug\net8.0-windows10.0.17763.0\Plugins\com.microdock.note\$(TargetName)$(TargetExt)" />
